Fix for not showing a scroll bar in Chrome

--- a/public/styles.css
+++ b/public/styles.css
@@ -5,7 +5,7 @@ html{
     -webkit-tap-highlight-color: transparent;
 }
 body {
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
     /* Disable text selection on long press */
     -webkit-user-select: none;
     /*Prevent text size inflation on landscape mode:*/
